Added get all teams endpoint with tests
